--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,8 @@ baseURL = "/"
 title = "Site du mémoire"
 languageCode = "fr"
 enableRobotsTXT = true
-paginate = 10
+[pagination]
+  pagerSize = 10
 
 # Thème via Hugo Modules (propre en CI)
 [module]
