--- a/content/.github/workflows/hugo.yml
+++ b/content/.github/workflows/hugo.yml
@@ -21,17 +21,17 @@ jobs:
       HUGO_VERSION: 0.128.2  # version récente et stable
     steps:
       - uses: actions/checkout@v4
-
-      # Modules Hugo => on installe Go pour la résolution des modules
-      - uses: actions/setup-go@v5
+      - name: Setup Go (for Hugo Modules)
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.22'
+          go-version: '1.25.x'   # Go récent, ok pour Modules
 
-      # Installe Hugo Extended (action officielle tierce)
-      - uses: peaceiris/actions-hugo@v3
+      - name: Setup Hugo (Extended)
+        uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: ${{ env.HUGO_VERSION }}
+          hugo-version: '0.151.2'  # <— version publiée (évite le 404)
           extended: true
+
       # Vérifications utiles (troubleshooting)
       - name: Preflight (arbo + config)
         run: |
